--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -18,6 +18,7 @@
 }
 .links {
   position: absolute;
+
   display: flex;
   gap: 60px;
   align-self: center;
@@ -26,6 +27,7 @@
 .links a {
   text-decoration: none;
   color: #333333;
+  cursor: pointer;
 }
 
 .innerwrapper {
