--- a/src/app/(main)/page.module.css
+++ b/src/app/(main)/page.module.css
@@ -1,25 +1,95 @@
-.page {
+.container {
   background: #fff;
   width: 100%;
   height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-self: center;
+  align-items: center;
+  text-align: center;
+  gap: 32px;
+  font-size: 900;
+}
 
-  @media screen and (max-width: 360px) {
+.container .bp2 {
+  display: none;
+}
+.container .bp3 {
+  display: none;
+}
+.container .bp4 {
+  display: none;
+}
+.container .bp5 {
+  display: none;
+}
+
+@media screen and (max-width: 360px) {
+  .container {
     background-color: #111;
     transition: background-color 0.2s ease;
   }
-
-  @media screen and (min-width: 361px) and (max-width: 720px) {
-    transition: background-color 0.2s ease;
+  .container .bp1 {
+    display: none;
+  }
+  .container .bp2 {
+    display: none;
+  }
+  .container .bp3 {
+    display: none;
+  }
+  .container .bp4 {
+    display: none;
+  }
+  .container .bp5 {
+    display: flex;
+    color: #fff;
+  }
+}
+@media screen and (min-width: 361px) and (max-width: 720px) {
+  .container {
     background-color: #333;
-  }
-
-  @media screen and (min-width: 721px) and (max-width: 1080px) {
     transition: background-color 0.2s ease;
+  }
+  .container .bp1 {
+    display: none;
+  }
+  .container .bp2 {
+    display: none;
+  }
+  .container .bp3 {
+    display: none;
+  }
+  .container .bp4 {
+    display: flex;
+    color: #ccc;
+  }
+}
+@media screen and (min-width: 721px) and (max-width: 1080px) {
+  .container {
+    background-color: #555;
+    transition: background-color 0.2s ease;
+  }
+  .container .bp1 {
+    display: none;
+  }
+  .container .bp2 {
+    display: none;
+  }
+  .container .bp3 {
+    display: flex;
+  }
+}
+@media screen and (min-width: 1081px) and (max-width: 1440px) {
+  .container {
     background-color: #777;
-  }
-
-  @media screen and (min-width: 1081px) and (max-width: 1440px) {
     transition: background-color 0.2s ease;
-    background-color: #999;
+  }
+  .container .bp1 {
+    display: none;
+  }
+  .container .bp2 {
+    display: flex;
   }
 }
