--- a/src/components/snb/Snb.module.css
+++ b/src/components/snb/Snb.module.css
@@ -8,7 +8,7 @@
   transform: translateX(100%);
   transition: transform 0.3s ease-in-out;
   z-index: 1001;
-  padding: 20px;
+  padding: 24px;
 }
 
 .snbOpen {
@@ -63,7 +63,7 @@
 }
 
 .nav a:hover {
-  color: #0070f3;
+  color: #0089ff;
 }
 
 .hr {
